Fix: 2nd section complete, alignment issues

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     box-sizing: border-box;
     margin: 0;
     font-family: Roboto, Helvetica, serif;
@@ -31,7 +31,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    width: 500px;
+    width: 460px;
     height: 250px;
 }
 
@@ -84,16 +84,17 @@
 .internal button {
     background-color: #3882f6;
     color: #f9faf8;
-    padding: 8px 32px;
+    padding: 7px 34px;
     margin-top: -5px;
-    border-radius: 10px;
-    font-size: 17px;
-    font-weight: 900;
+    border-radius: 8px;
+    border: 1px solid #3882f6;
+    font-size: 17.5px;
+    font-weight: 700;
 }
 
 .second-frame {
     background-color: white;
-    height: 530px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,12 +105,11 @@
     color: #1f2937;
     font-weight: 900;
     padding: 48px;
-    margin-bottom: 15px;
 }
 
 .image-container {
     height: 300px;
-    width: 200px;
+    width: 165px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -121,12 +121,19 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    gap: 3.5em;
+    gap: 3.2em;
 }
 
 .box {
-    width: 180px;
-    height: 180px;
-    border-radius: 10px;
-    border: 4px solid #3882F6;
+    width: 165px;
+    height: 165px;
+    border-radius: 12px;
+    border: 4.5px solid #3882F6;
+}
+
+.image-container p {
+    color: #262727cb;
+    margin-top: 10px;
+    font-size: 17.5px;
+    text-align: center;
 }
